--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ install_ghr: &install_ghr
   run:
     name: Install ghr (Github Releases)
     command: |
-      wget https://github.com/tcnksm/ghr/releases/download/v0.9.0/ghr_v0.9.0_linux_amd64.tar.gz
-      tar xf ghr_v0.9.0_linux_amd64.tar.gz
-      ln -sf ghr_v0.9.0_linux_amd64/ghr .
+      wget https://github.com/tcnksm/ghr/releases/download/v0.14.0/ghr_v0.14.0_linux_amd64.tar.gz
+      tar xf ghr_v0.14.0_linux_amd64.tar.gz
+      ln -sf ghr_v0.14.0_linux_amd64/ghr .
 
 install_jq: &install_jq
   run:
@@ -69,7 +69,7 @@ steps_to_build_cached_firmware: &steps_to_build_cached_firmware
     - <<: *install_hex_archives
     - <<: *install_libnl
     - run:
-        name: Build Farmbot OS Firmware
+        name: Build Farmlab OS Firmware
         working_directory: /nerves/build
         command: |
           mix deps.get
@@ -81,7 +81,7 @@ steps_to_build_cached_firmware: &steps_to_build_cached_firmware
     - run:
         name: Create artifacts
         command: |
-          cp /nerves/build/_build/${MIX_TARGET}/${MIX_TARGET}_${MIX_ENV}/nerves/images/farmbot.fw /nerves/deploy/system/artifacts/farmbot-${MIX_TARGET}-$(cat VERSION).fw
+          cp /nerves/build/_build/${MIX_TARGET}/${MIX_TARGET}_${MIX_ENV}/nerves/images/farmbot.fw /nerves/deploy/system/artifacts/farmlab-${MIX_TARGET}-$(cat VERSION).fw
     - save_cache:
         key: v14-fbos-{{ checksum "MIX_TARGET" }}-{{ checksum "MIX_ENV" }}-dependency-cache-{{ checksum "mix.lock" }}
         paths:
@@ -106,7 +106,7 @@ steps_to_build_fresh_firmware: &steps_to_build_fresh_firmware
     - <<: *install_hex_archives
     - <<: *install_libnl
     - run:
-        name: Build Farmbot OS Firmware
+        name: Build Farmlab OS Firmware
         working_directory: /nerves/build
         command: |
           mix deps.get
@@ -118,7 +118,7 @@ steps_to_build_fresh_firmware: &steps_to_build_fresh_firmware
     - run:
         name: Create artifacts
         command: |
-          cp /nerves/build/_build/${MIX_TARGET}/${MIX_TARGET}_${MIX_ENV}/nerves/images/farmbot.fw /nerves/deploy/system/artifacts/farmbot-${MIX_TARGET}-$(cat VERSION).fw
+          cp /nerves/build/_build/${MIX_TARGET}/${MIX_TARGET}_${MIX_ENV}/nerves/images/farmbot.fw /nerves/deploy/system/artifacts/farmlab-${MIX_TARGET}-$(cat VERSION).fw
     - save_cache:
         key: v14-fbos-{{ checksum "MIX_TARGET" }}-{{ checksum "MIX_ENV" }}-dependency-cache-{{ checksum "mix.lock" }}
         paths:
@@ -151,7 +151,7 @@ jobs:
   ################################################################################
   #                                    TEST                                      #
   ################################################################################
-  test_farmbot_os:
+  test_farmlab_os:
     <<: *defaults
     environment:
       MIX_ENV: test
@@ -167,7 +167,7 @@ jobs:
       - <<: *install_elixir
       - <<: *install_hex_archives
       - run:
-          name: Test Farmbot OS
+          name: Test Farmlab OS
           working_directory: /nerves/build
           command: |
             mix deps.get
@@ -178,8 +178,8 @@ jobs:
       - save_cache:
           key: v14-fbos-host-test-dependency-cache-{{ checksum "mix.lock" }}
           paths:
-            - farmbot_os/_build/host
-            - farmbot_os/deps/host
+            - farmlab_os/_build/host
+            - farmlab_os/deps/host
       - save_cache:
           key: v14-fbos-coverage-cache-{{ .Branch }}-{{ .Revision }}
           paths:
@@ -259,7 +259,7 @@ jobs:
     <<: *predeploy_setup
 
   ################################################################################
-  #               TARGET FIRMWARE NERVES GITHUB RELEASE main                   #
+  #               TARGET FIRMWARE NERVES GITHUB RELEASE prod                   #
   ################################################################################
 
   release_to_github:
@@ -292,39 +292,39 @@ jobs:
       - run:
           name: Sign rpi4 Firmware and create image
           command: |
-            mv /nerves/deploy/system/artifacts/farmbot-rpi4-$(cat VERSION).fw /tmp/farmbot-rpi4-$(cat VERSION).fw
-            fwup -S -s $NERVES_FW_PRIV_KEY -i /tmp/farmbot-rpi4-$(cat VERSION).fw -o /nerves/deploy/system/artifacts/farmbot-rpi4-$(cat VERSION).fw
-            fwup -a -t complete -i /nerves/deploy/system/artifacts/farmbot-rpi4-$(cat VERSION).fw -d /nerves/deploy/system/artifacts/farmbot-rpi4-$(cat VERSION).img
-            sha256sum /nerves/deploy/system/artifacts/farmbot-rpi4-$(cat VERSION).img > /nerves/deploy/system/artifacts/farmbot-rpi4-$(cat VERSION).sha256
+            mv /nerves/deploy/system/artifacts/farmlab-rpi4-$(cat VERSION).fw /tmp/farmlab-rpi4-$(cat VERSION).fw
+            fwup -S -s $NERVES_FW_PRIV_KEY -i /tmp/farmlab-rpi4-$(cat VERSION).fw -o /nerves/deploy/system/artifacts/farmlab-rpi4-$(cat VERSION).fw
+            fwup -a -t complete -i /nerves/deploy/system/artifacts/farmlab-rpi4-$(cat VERSION).fw -d /nerves/deploy/system/artifacts/farmlab-rpi4-$(cat VERSION).img
+            sha256sum /nerves/deploy/system/artifacts/farmlab-rpi4-$(cat VERSION).img > /nerves/deploy/system/artifacts/farmlab-rpi4-$(cat VERSION).sha256
       - run:
           name: Sign rpi3 Firmware and create image
           command: |
-            mv /nerves/deploy/system/artifacts/farmbot-rpi3-$(cat VERSION).fw /tmp/farmbot-rpi3-$(cat VERSION).fw
-            fwup -S -s $NERVES_FW_PRIV_KEY -i /tmp/farmbot-rpi3-$(cat VERSION).fw -o /nerves/deploy/system/artifacts/farmbot-rpi3-$(cat VERSION).fw
-            fwup -a -t complete -i /nerves/deploy/system/artifacts/farmbot-rpi3-$(cat VERSION).fw -d /nerves/deploy/system/artifacts/farmbot-rpi3-$(cat VERSION).img
-            sha256sum /nerves/deploy/system/artifacts/farmbot-rpi3-$(cat VERSION).img > /nerves/deploy/system/artifacts/farmbot-rpi3-$(cat VERSION).sha256
+            mv /nerves/deploy/system/artifacts/farmlab-rpi3-$(cat VERSION).fw /tmp/farmlab-rpi3-$(cat VERSION).fw
+            fwup -S -s $NERVES_FW_PRIV_KEY -i /tmp/farmlab-rpi3-$(cat VERSION).fw -o /nerves/deploy/system/artifacts/farmlab-rpi3-$(cat VERSION).fw
+            fwup -a -t complete -i /nerves/deploy/system/artifacts/farmlab-rpi3-$(cat VERSION).fw -d /nerves/deploy/system/artifacts/farmlab-rpi3-$(cat VERSION).img
+            sha256sum /nerves/deploy/system/artifacts/farmlab-rpi3-$(cat VERSION).img > /nerves/deploy/system/artifacts/farmlab-rpi3-$(cat VERSION).sha256
       - run:
           name: Sign rpi Firmware and create image
           command: |
-            mv /nerves/deploy/system/artifacts/farmbot-rpi-$(cat VERSION).fw /tmp/farmbot-rpi-$(cat VERSION).fw
-            fwup -S -s $NERVES_FW_PRIV_KEY -i /tmp/farmbot-rpi-$(cat VERSION).fw -o /nerves/deploy/system/artifacts/farmbot-rpi-$(cat VERSION).fw
-            fwup -a -t complete -i /nerves/deploy/system/artifacts/farmbot-rpi-$(cat VERSION).fw -d /nerves/deploy/system/artifacts/farmbot-rpi-$(cat VERSION).img
-            sha256sum /nerves/deploy/system/artifacts/farmbot-rpi-$(cat VERSION).img > /nerves/deploy/system/artifacts/farmbot-rpi-$(cat VERSION).sha256
+            mv /nerves/deploy/system/artifacts/farmlab-rpi-$(cat VERSION).fw /tmp/farmlab-rpi-$(cat VERSION).fw
+            fwup -S -s $NERVES_FW_PRIV_KEY -i /tmp/farmlab-rpi-$(cat VERSION).fw -o /nerves/deploy/system/artifacts/farmlab-rpi-$(cat VERSION).fw
+            fwup -a -t complete -i /nerves/deploy/system/artifacts/farmlab-rpi-$(cat VERSION).fw -d /nerves/deploy/system/artifacts/farmlab-rpi-$(cat VERSION).img
+            sha256sum /nerves/deploy/system/artifacts/farmlab-rpi-$(cat VERSION).img > /nerves/deploy/system/artifacts/farmlab-rpi-$(cat VERSION).sha256
       - run:
           name: Publish Github Release
-          command: ./ghr -t $GITHUB_TOKEN -u farmbot -r farmbot_os -recreate -prerelease -draft -delete -b "$(cat RELEASE_NOTES)" -c $(git rev-parse --verify HEAD) "v$(cat VERSION)" /nerves/deploy/system/artifacts
+          command: ./ghr -t $GITHUB_TOKEN -u leessxx -r farmlab_os -recreate -prerelease -draft -delete -c $(git rev-parse --verify HEAD) "v$(cat VERSION)" /nerves/deploy/system/artifacts
 
 workflows:
   version: 2
   test:
     jobs:
-      - test_farmbot_os:
+      - test_farmlab_os:
           context: org-global
           filters:
             branches:
               ignore:
-                - main
-  # main branch to my.farmbot.io
+                - prod
+  # prod branch to my.farmlab.ltd
   create_github_release:
     jobs:
       - build_fresh_rpi4:
@@ -332,21 +332,21 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - prod
                 - /^qa\/.*/
       - build_fresh_rpi3:
           context: org-global
           filters:
             branches:
               only:
-                - main
+                - prod
                 - /^qa\/.*/
       - build_fresh_rpi:
           context: org-global
           filters:
             branches:
               only:
-                - main
+                - prod
                 - /^qa\/.*/
       - predeploy_rpi4:
           context: org-global
